test/official_tests/for/statement_condition.lox
// error: {"line":3,"message":"expect expression","type":"ParseError"}
// error: {"line":3,"message":"Expect ';' after value","type":"ParseError"}
for (var a = 1; {}; a = a + 1) {}
